[tool.poetry]
name = "25001405"
version = "0.1.0"
description = ""
authors = ["Shakya658 <shirishshakya4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.2"
scikit-learn = "1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
